# discord-reminder-bot

./: .env.example  .gitignore  PRIVACY_POLICY.md  PROJECT_CONTEXT.md  README.md  TERMS_OF_SERVICE.md  pyproject.toml  render.yaml  requirements.txt
src/reminder_bot/: __init__.py  bot.py  config.py  database.py  formatting.py  models.py  reminder_service.py  scheduler.py  time_parser.py
src/reminder_bot/commands/: __init__.py  reminder.py
tests/: test_formatting.py  test_reminder_service.py  test_time_parser.py
