[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-reminder-bot"
version = "0.1.0"
description = "Discord bot for channel-based project process reminders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.5,<3",
    "python-dotenv>=1.0,<2",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

